segunda pre entrega

--- a/src/views/product-detail.handlebars
+++ b/src/views/product-detail.handlebars
@@ -14,7 +14,7 @@
         <div>
             <img src="{{thumbnails.[0]}}" alt="img_product" width="500"> <br>
         </div>
-            <a class="btn btn-success" href="">Agregar al carrito</a>
+            <a class="btn btn-success" href="/api/carts/63d840b39055e07968b7f1e0/products/{{product._id}}">Agregar al carrito</a>
             <hr>
             <a class="btn btn-danger" href="#" onClick="history.go(-1)">Volver</a>
             
