--- a/src/views/product-pages.handlebars
+++ b/src/views/product-pages.handlebars
@@ -20,7 +20,7 @@
             <td>{{this.code}}</td>
             <td>{{this.stock}}</td>
             <td>{{this.category}}</td>
-            <td><a class="btn btn-success" href="">Agregar al carrito</a></td>
+            <td><a class="btn btn-success" href="/api/carts/63d840b39055e07968b7f1e0/products/{{this._id}}">Agregar al carrito</a></td>
 
         </tr>
     {{/each}}  
