--- a/src/views/cart-detail.handlebars
+++ b/src/views/cart-detail.handlebars
@@ -1,9 +1,9 @@
-<h1 class="display-5 text-center">Carrito</h1>
+<h1 class="display-5 text-center text-light">Carrito</h1>
 {{#if error}}
 <h3 class="text-center">{{error}}</h3>
-<h6>Try Another Cart</h6>
+<h6 class="text-light">Try Another Cart</h6>
 {{else}}
-<h3 class="text-center">Número: {{_id}}</h3>
+<h3 class="text-center text-light">Número: {{_id}}</h3>
 <br>
 <a class="btn boton" href="#" onClick="history.go(-1)">Volver</a>
 <br>
