--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,6 +10,14 @@
 </head>
 <body class="bg-dark">
     <div class="container">
+        {{#if user}}
+        <h5 class="text-light">Bienvenido {{user.first_name}} {{user.last_name}} 
+        <i> {{user.role}}</i> </h5>
+        <div>
+            <a class="text-light" href="/session/logout">Logout</a>
+        </div>
+        <h5><button id="user_cart" cartid="{{user.cart}}"> <a href="/views/carts/{{user.cart}}">Carrito</a></button></h5>
+    {{/if}}
     {{{body}}}
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
