--- a/src/views/product-detail.handlebars
+++ b/src/views/product-detail.handlebars
@@ -3,10 +3,11 @@
 
 <br>
 <div>   
+        
 
         <div> 
            
-            <strong class="detalle">Precio: ${{product.price}}</strong>$ <br>
+            <strong class="detalle">Precio: ${{product.price}}</strong> <br>
             <strong class="detalle">Código: {{product.code}}</strong>  <br>
             <strong class="detalle">Stock: {{product.stock}}</strong>  <br>
             <strong class="detalle">Categoría: {{product.category}}</strong>  <br>
@@ -14,7 +15,7 @@
         <div>
             <img src="{{thumbnails.[0]}}" alt="img_product" width="500"> <br>
         </div>
-            <a class="btn btn-success" href="/api/carts/63d840b39055e07968b7f1e0/products/{{product._id}}">Agregar al carrito</a>
+            <button class="btn btn-success" type="button" name="addToCart" id="{{product._id}}">Agregar al carrito</button>
             <hr>
             <a class="btn btn-danger" href="#" onClick="history.go(-1)">Volver</a>
             
@@ -23,3 +24,4 @@
 
 
 </div>
+<script src="/js/product-buttons.js"></script>
