--- a/src/views/product-pages.handlebars
+++ b/src/views/product-pages.handlebars
@@ -1,3 +1,4 @@
+
 <h1 class="display-5 text-center">Productos disponibles</h1>
 <br>
 <table class="table table-dark table-striped table-hover">
@@ -10,17 +11,17 @@
         <td><strong>Categoría</strong></td>
     </tr>
 
-    {{#each payload}}
+    {{#each products.payload}}
         <tr>
 
 
-            <td> <button class="boton btn"><a href="products/{{this._id}}">{{this.title}}</a></button></td>
+            <td align="center"> <a href="/views/products/{{this._id}}"><img class="rounded" src="{{thumbnails.[0]}}" alt="img_product" width="100"> <br>{{this.title}}</a></td>
             <td>{{this.description}}</td>
             <td>{{this.price}}</td>
             <td>{{this.code}}</td>
             <td>{{this.stock}}</td>
             <td>{{this.category}}</td>
-            <td><a class="btn btn-success" href="/api/carts/63d840b39055e07968b7f1e0/products/{{this._id}}">Agregar al carrito</a></td>
+            <td><button class="btn btn-success" type="button" name="addToCart" id="{{this._id}}">Agregar al carrito</button></td>
 
         </tr>
     {{/each}}  
@@ -32,3 +33,5 @@
 {{#if hasNextPage}}
     <a class="btn btn-success" href="{{nextLink}}">Página Siguiente</a>
 {{/if}}
+
+<script src="/js/product-buttons.js"></script>
